# rcvs_web_scraper

./: .readthedocs.yaml  pyproject.toml
.github/workflows/: python.yml
docs/: conf.py  out.csv
docs/source/: conf.py  index.rst  modules.rst
notebooks/: sandbox.ipynb
src/: converter.py  dataframe_to_json.py  mongodb_client.py  mongodb_connection.py  out.csv  rcvs.json  rcvs_web_scraper.py
src/main/: out.csv  pyproject.toml  rcvs_web_scraper.py
src/test/.hypothesis/examples/4a099004ddf0664c/: 09f232533a520918  13ca196e3df8d267  29bccb7df8251220  524017d35745a1d5  619a0b0b2d825c43  68f30f19a1df4bbb  89c80884f18fb519  8ca695c495ba92a4  f0534f5c7fb9e31f
src/test/.hypothesis/examples/fa16eb99ab81b416/: 69f8ef4d322cb853  bb3847064b98cd06
test/: test_rcvs_web_scraper.py
test/.hypothesis/examples/4a099004ddf0664c/: 000118727e65f1e2  050aaeea11d4b69f  061396cf2842daf3  0719a55ec427a69d  0c283ef35fce27a6  121b76f6c4847a8a  152dbce39a7295be  2b397bfcbf22c701  2dcdea65806bbcf5  35499dabab7aa3e8  4c0769c140597131  4d99dcf1c674d1fa  58256fd6bca05481  5a2a7a0f58e97beb  5a5274461ac2df76  5cfb98f3fa3d5dc1  647faf793c3a3a23  7a2fe74ecdd46737  7fd63987923e075b  87fb95940ac26c9a  8ac4b831d480ca4b  91910a9ac947fe50  a3dc232ada34d4ac  b085d65ec4bc25ed  ba97ecdc5895ec87  bc5565d0b8bffd7e  c5557d554ba2cac6  d16dcc51e936548a  d3cb353a686183ac  d969787bb2d88ac1  ddd3abfa3ea6b1c8  e19f0abb4e67d783  e4ac15c083e658fd
test/.hypothesis/examples/fa16eb99ab81b416/: 14fa839c286c0d6a  3a83cd7721574841  5c925729ff45577a  74e185e96a60229b  97573e6d7eb9e0e0
